{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 1144,
  "lineage": "cc1ae8f1-2803-278a-d130-f7cea5a3edcb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "teachua-beanstalk-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:security-group/sg-06bb200f5c13fae5f",
            "description": "Security group for beanstalk instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bb200f5c13fae5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "teachua-beanstalk-instance-sg",
            "name_prefix": "",
            "owner_id": "771919296983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Beanstalk_instance_SG"
            },
            "tags_all": {
              "Name": "Beanstalk_instance_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "teachua-beanstalk-app-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:security-group/sg-013f71dc6e0d2fa63",
            "description": "Security group for beanstalk load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013f71dc6e0d2fa63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "teachua-beanstalk-elb-sg",
            "name_prefix": "",
            "owner_id": "771919296983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Beanstalk_ELB_SG"
            },
            "tags_all": {
              "Name": "Beanstalk_ELB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "teachua_app_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:security-group/sg-01df613a838bab87c",
            "description": "Security group for database connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01df613a838bab87c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "teachua_application_database_sg",
            "name_prefix": "",
            "owner_id": "771919296983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS_instance_SG"
            },
            "tags_all": {
              "Name": "RDS_instance_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:network-acl/acl-0fb29940beb1d5f3c",
            "default_network_acl_id": "acl-0fb29940beb1d5f3c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fb29940beb1d5f3c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "771919296983",
            "subnet_ids": [
              "subnet-014d793e8778cf660",
              "subnet-068c5443e10cf2b0b",
              "subnet-0cafaacfe2b9aa668"
            ],
            "tags": {
              "Name": "teachua-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:route-table/rtb-04e66d728bc603300",
            "default_route_table_id": "rtb-04e66d728bc603300",
            "id": "rtb-04e66d728bc603300",
            "owner_id": "771919296983",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "teachua-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:security-group/sg-08f2c83c138feae44",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08f2c83c138feae44",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "771919296983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "teachua-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:internet-gateway/igw-0a81d29b54806a74a",
            "id": "igw-0a81d29b54806a74a",
            "owner_id": "771919296983",
            "tags": {
              "Name": "teachua-vpc",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a81d29b54806a74a",
            "id": "r-rtb-0442512b6f894eebf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0442512b6f894eebf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:route-table/rtb-0442512b6f894eebf",
            "id": "rtb-0442512b6f894eebf",
            "owner_id": "771919296983",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a81d29b54806a74a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "teachua-vpc-public",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc-public",
              "enviroment": "testing",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0302bb296dc296825",
            "route_table_id": "rtb-0442512b6f894eebf",
            "subnet_id": "subnet-014d793e8778cf660"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0cec2d0b09dce6",
            "route_table_id": "rtb-0442512b6f894eebf",
            "subnet_id": "subnet-068c5443e10cf2b0b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0769c772d39b5c686",
            "route_table_id": "rtb-0442512b6f894eebf",
            "subnet_id": "subnet-0cafaacfe2b9aa668"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:subnet/subnet-014d793e8778cf660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014d793e8778cf660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771919296983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teachua-vpc-public-us-east-1a",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc-public-us-east-1a",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:subnet/subnet-068c5443e10cf2b0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068c5443e10cf2b0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771919296983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teachua-vpc-public-us-east-1b",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc-public-us-east-1b",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:subnet/subnet-0cafaacfe2b9aa668",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cafaacfe2b9aa668",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771919296983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teachua-vpc-public-us-east-1c",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc-public-us-east-1c",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-0da1ed231d4b2fd44"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:771919296983:vpc/vpc-0da1ed231d4b2fd44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb29940beb1d5f3c",
            "default_route_table_id": "rtb-04e66d728bc603300",
            "default_security_group_id": "sg-08f2c83c138feae44",
            "dhcp_options_id": "dopt-0d73591af9ad7b2f4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da1ed231d4b2fd44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e66d728bc603300",
            "owner_id": "771919296983",
            "tags": {
              "Name": "teachua-vpc",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "teachua-vpc",
              "enviroment": "testing",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}